# spesen-app

./: .dockerignore  .env.example  .gitignore  BACKLOG.md  CLAUDE.md  Dockerfile  README.md  app.py  cli.py  docker-compose.simple.yml  docker-compose.yml  gunicorn.conf.py  migrate_file_hash.py  pyproject.toml  requirements.txt  setup.sh  sort_belege.py  spesen  test.sh  update_cache_paths.py
templates/: index.html
