[project]
name = "spesen-app"
version = "1.0.0"
description = "Automatische Spesenabrechnung mit KI-gestützter Belegerkennung"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Olivier Dobberkau"}
]

dependencies = [
    "flask>=3.0.0",
    "gunicorn>=23.0.0",
    "openpyxl>=3.1.2",
    "reportlab>=4.1.0",
    "cryptography>=42.0.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.2.0",
    "pdf2image>=1.17.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
spesen-cli = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.black]
line-length = 120
target-version = ["py311"]
